# config-gen

./: .gitignore  .merlin  .ocamlformat  Dockerfile  README.md  build.sh  dune-project  main.ml
lib/: dune  execute.ml  execute.mli  file.ml  file.mli  template.ml  template.mli
src/: main.ml  pattern.ml  pattern.mli  template.ml  template.mli
test/: dune
